--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header id="page-top">
-    <div id="navbar" class="bavbar-fixed">
+    <div id="navbar" class="navbar-fixed">
         <nav class="nav-extended">
             <div class="nav-wrapper">
                 <a href="/" class="brand-logo"><img id="logo" src="/img/logo.jpg" alt="Zubis Mart Logo"></a>
@@ -114,7 +114,7 @@
                 <li class="services"><a href="#!" class="dropdown-trigger" data-target="mobile-services-dropdown"><i class="mdi mdi-truck-fast left"></i>Services</a></li>
                 <li class="sell"><a href="/sell"><i class="mdi mdi-tag left"></i>Sell on Z-Mart</a></li>
                 <li><a href="#loginModal" class="modal-trigger"><i class="mdi mdi-login left"></i>Login/Signup</a></li>
-            {{/if}}            
+            {{/if}}
         </ul>
     </div>
     {{> loginModal}}
