--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,11 +45,12 @@ body {
 
 #logo {
     max-width: 155px !important;
-    height: 56px ;
+    max-height: 64px !important ;
 }
 
 nav {
     background-color: #a7b018;
+    height: 64px !important ;
 }
 
 nav .nav-wrapper {
