--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,6 +348,10 @@ form .progress {
     font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.sidenav-overlay {
+    z-index: 996;
+}
+
 .slider .indicators .indicator-item.active {
     background-color: #fa9609;
 }
