Added to Sell Page

--- a/views/sell.hbs
+++ b/views/sell.hbs
@@ -38,7 +38,7 @@
                 <div class="col s12 l4">
                     <i class="mdi mdi-calculator sell-icons"></i>
                     <h5 class="sell-sub-header">Low Commissions</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rem soluta molestiae porro dignissimos unde aliquid cupiditate alias labore numquam!</p>
+                    <p>We charge you close to nothing for the maximum result you can get to enable you maximize returns and nurture your business to its highest potential.</p>
                 </div>
             </div>
             <div class="row center">
